Решена задача: Функция makeFriendsList(friends)

--- a/4-module/1-task/index.html
+++ b/4-module/1-task/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title>Занятие 4: Список друзей</title>
+<body>
 <script src="index.js"></script>
 <script>
   /**
@@ -23,5 +24,6 @@
     }
   ];
 
-  document.body.appendChild(makeFriendsList(friends));
+  document.body.appendChild(makeFriendsList(friends));  //
 </script>
+</body>
